--- a/main.css
+++ b/main.css
@@ -1,86 +1,222 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Ubuntu&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto|Ubuntu&display=swap");
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
-	color: #393939;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  color: #393939;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  display: none;
 }
 
 a {
-	text-decoration: none;
-	cursor: pointer;
-	color: #393939;
+  text-decoration: none;
+  cursor: pointer;
+  color: #393939;
 }
 
 header {
-	width: 100%;
-	height: 204px;
-	background: lightblue;
+  width: 100%;
+  height: 204px;
+  background: lightblue;
 }
 
 footer {
-	width: 100%;
-	height: 160px;
-	background: lightblue;
+  width: 100%;
+  height: 160px;
+  background: lightblue;
 }
 
 .main {
-	width: 100%;
-	padding: 24px 0 168px 0;
+  padding: 68px 128px 128px 168px;
 }
-
-.main__wrapper {
-	display: flex;
-	justify-content: space-between;
-	margin: 0 0 30px 0;
+h1 {
+  margin-bottom: 28px;
+  font-size: 25px;
 }
-
-.main__block {
-	border-radius: 4px;
-	border: solid 1px #cfd3da;
+h2 {
+  font-size: 18px;
 }
-
-.main__block_l {
-	min-width: 825px;
-	width: 75%;
+.block {
+  width: 825px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  border: solid 1px #cfd3da;
 }
-
-.main__block_s {
-	width: 255px;
+.block-2 .wrapper-line {
+  margin: 0 0 25px 26px;
 }
-
-.main__block-item {
-	padding: 26px 24px 19px 24px;
-	border-bottom: 1px solid #cfd3da;
+.block-item {
+  padding: 22px 24px 20px 24px;
+  border-bottom: 1px solid #cfd3da;
 }
-
-.main__block-item:last-of-type {
-	border-bottom: none;
+.block-item:last-child {
+  border: none;
 }
-
-
-.grid {
-	width: 1280px;
-	margin: 0 auto;
+.block-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-
-.path {
-	margin: 0 0 28px 0;
-	font-size: 13px;
+.block-line {
+  display: flex;
+  align-items: center;
 }
-
-.path span {
-	color: #999;
+.block-line .block-column:first-child {
+  width: 500px;
 }
-
-.title {
-	margin: 0 0 43px 0;
-	font-family: 'Roboto', sans-serif;
-	font-weight: bold;
+.block-line .block-column:nth-child(2) {
+  width: 116px;
+  text-align: right;
 }
-
-.title_h1 {
-	font-size: 25px;
+.block-line .block-column:nth-child(3) {
+  width: 95px;
+  text-align: right;
+}
+.block-line .block-column:last-child {
+  width: 138px;
+  text-align: right;
+}
+.block-item-space {
+  padding: 36px 62px;
+  display: flex;
+  justify-content: space-between;
+}
+.icon {
+  width: 34px;
+  height: 30px;
+  border: 1px solid #000;
+}
+.wrapper-line {
+  display: flex;
+  align-items: center;
+}
+.wrapper-line-start {
+  align-items: flex-start;
+}
+.block_1 .wrapper-line:first-child {
+  margin-bottom: 33px;
+}
+.text-bold {
+  font-weight: bold;
+  color: #393939;
+}
+.text-extra {
+  font-size: 14px;
+  color: #999999;
+}
+.wrapper-line span {
+  display: inline-block;
+}
+.wrapper-line span:first-child {
+  width: 500px;
+}
+.wrapper-line span:nth-child(2) {
+  width: 116px;
+  text-align: right;
+}
+.wrapper-line span:nth-child(3) {
+  width: 95px;
+  text-align: right;
+}
+.wrapper-line span:last-child {
+  width: 138px;
+  text-align: right;
+}
+.btn {
+  width: 160px;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 14px;
+  border-radius: 4px;
+  background: #0059a0;
+  color: #fff;
+  border: solid 1px #0059a0;
+}
+.btn-empty {
+  width: 160px;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 14px;
+  color: #0059a0;
+  border-radius: 4px;
+  border: solid 1px #0059a0;
+  background-color: #ffffff;
+}
+.radio-wrapper {
+  display: flex;
+  align-items: center;
+  margin-right: 27px;
+}
+.radio {
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
+  border-radius: 50%;
+  border: 1px solid #cfd3da;
+}
+.wrapper-column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 65px;
+}
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 14px;
+}
+.input-wrapper .checkbox-wrapper {
+  margin: 17px 0 0 0;
+}
+.input-label {
+  font-size: 13px;
+  font-weight: bold;
+  color: #393939;
+  margin-bottom: 6px;
+}
+.input {
+  width: 294px;
+  height: 40px;
+  padding: 0 17px;
+  border-radius: 4px;
+  border: solid 1px #cfd3da;
+  background-color: #ffffff;
+  font-size: 14px;
+  color: #393939;
+  outline: none;
+}
+.area {
+  width: 294px;
+  height: 116px;
+  padding: 0 17px;
+  border-radius: 4px;
+  border: solid 1px #cfd3da;
+  background-color: #ffffff;
+  font-size: 14px;
+  color: #393939;
+  outline: none;
+  resize: none;
+}
+.checkbox {
+  width: 16px;
+  height: 16px;
+  margin-right: 16px;
+  background: #000;
+}
+.checkbox-wrapper {
+  display: flex;
+  align-items: center;
+  margin: 0 0 36px 26px;
+}
+.checkbox-label {
+  font-size: 13px;
+  color: #393939;
+}
+.checkbox-label a {
+  color: #5392ce;
+  text-decoration: underline;
 }
