--- a/main.css
+++ b/main.css
@@ -1,222 +1,329 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto|Ubuntu&display=swap");
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
-  color: #393939;
+@font-face {
+	font-family: 'Awesome';
+	src: url('fonts/fa-brands-400.woff2');
+	font-weight: normal;
 }
 
-input[type="radio"],
-input[type="checkbox"] {
-  display: none;
+@font-face {
+	font-family: 'Lato';
+	src: url('fonts/Lato-Regular.ttf');
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: 'Lato';
+	src: url('fonts/Lato-Bold.ttf');
+	font-weight: bold;
+}
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: "Lato", sans-serif;
+	color: #393939;
+}
+
+input[type="radio"], input[type="checkbox"] {
+	display: none;
+}
+
+label {
+	cursor: pointer;
 }
 
 a {
-  text-decoration: none;
-  cursor: pointer;
-  color: #393939;
+	text-decoration: none;
+	cursor: pointer;
+	color: #393939;
+}
+
+.fal {
+	font-family: "Awesome";
 }
 
 header {
-  width: 100%;
-  height: 204px;
-  background: lightblue;
+	width: 100%;
+	height: 204px;
+	background: lightblue;
 }
 
 footer {
-  width: 100%;
-  height: 160px;
-  background: lightblue;
+	width: 100%;
+	height: 160px;
+	background: lightblue;
 }
 
 .main {
-  padding: 68px 128px 128px 168px;
+	padding: 68px 128px 128px 168px;
 }
+
 h1 {
-  margin-bottom: 28px;
-  font-size: 25px;
+	margin-bottom: 28px;
+	font-size: 25px;
 }
+
 h2 {
-  font-size: 18px;
+	font-size: 18px;
 }
+
 .block {
-  width: 825px;
-  margin-bottom: 30px;
-  border-radius: 4px;
-  border: solid 1px #cfd3da;
+	width: 825px;
+	margin-bottom: 30px;
+	border-radius: 4px;
+	border: solid 1px #cfd3da;
 }
+
 .block-2 .wrapper-line {
-  margin: 0 0 25px 26px;
+	margin: 0 0 25px 26px;
 }
+
 .block-item {
-  padding: 22px 24px 20px 24px;
-  border-bottom: 1px solid #cfd3da;
+	padding: 22px 24px 20px 24px;
+	border-bottom: 1px solid #cfd3da;
 }
+
 .block-item:last-child {
-  border: none;
+	border: none;
 }
+
 .block-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
+
 .block-line {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
+
 .block-line .block-column:first-child {
-  width: 500px;
+	width: 500px;
 }
+
 .block-line .block-column:nth-child(2) {
-  width: 116px;
-  text-align: right;
+	width: 116px;
+	text-align: right;
 }
+
 .block-line .block-column:nth-child(3) {
-  width: 95px;
-  text-align: right;
+	width: 95px;
+	text-align: right;
 }
+
 .block-line .block-column:last-child {
-  width: 138px;
-  text-align: right;
+	width: 138px;
+	text-align: right;
 }
+
 .block-item-space {
-  padding: 36px 62px;
-  display: flex;
-  justify-content: space-between;
+	padding: 36px 62px;
+	display: flex;
+	justify-content: space-between;
 }
+
 .icon {
-  width: 34px;
-  height: 30px;
-  border: 1px solid #000;
+	width: 34px;
+	height: 30px;
+	font-family: "Awesome";
 }
+
 .wrapper-line {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
+
 .wrapper-line-start {
-  align-items: flex-start;
+	align-items: flex-start;
 }
+
 .block_1 .wrapper-line:first-child {
-  margin-bottom: 33px;
+	margin-bottom: 33px;
 }
+
 .text-bold {
-  font-weight: bold;
-  color: #393939;
+	font-weight: bold;
+	color: #393939;
 }
+
 .text-extra {
-  font-size: 14px;
-  color: #999999;
+	font-size: 14px;
+	color: #999999;
 }
+
 .wrapper-line span {
-  display: inline-block;
+	display: inline-block;
 }
+
 .wrapper-line span:first-child {
-  width: 500px;
+	width: 500px;
 }
+
 .wrapper-line span:nth-child(2) {
-  width: 116px;
-  text-align: right;
+	width: 116px;
+	text-align: right;
 }
+
 .wrapper-line span:nth-child(3) {
-  width: 95px;
-  text-align: right;
+	width: 95px;
+	text-align: right;
 }
+
 .wrapper-line span:last-child {
-  width: 138px;
-  text-align: right;
+	width: 138px;
+	text-align: right;
 }
+
 .btn {
-  width: 160px;
-  text-align: center;
-  padding: 10px 0;
-  font-size: 14px;
-  border-radius: 4px;
-  background: #0059a0;
-  color: #fff;
-  border: solid 1px #0059a0;
+	width: 160px;
+	text-align: center;
+	padding: 10px 0;
+	font-size: 14px;
+	border-radius: 4px;
+	background: #0059a0;
+	color: #fff;
+	border: solid 1px #0059a0;
 }
+
 .btn-empty {
-  width: 160px;
-  text-align: center;
-  padding: 10px 0;
-  font-size: 14px;
-  color: #0059a0;
-  border-radius: 4px;
-  border: solid 1px #0059a0;
-  background-color: #ffffff;
+	width: 160px;
+	text-align: center;
+	padding: 10px 0;
+	font-size: 14px;
+	color: #0059a0;
+	border-radius: 4px;
+	border: solid 1px #0059a0;
+	background-color: #ffffff;
 }
+
 .radio-wrapper {
-  display: flex;
-  align-items: center;
-  margin-right: 27px;
+	display: flex;
+	align-items: center;
+	margin-right: 27px;
 }
+
 .radio {
-  width: 20px;
-  height: 20px;
-  margin-right: 15px;
-  border-radius: 50%;
-  border: 1px solid #cfd3da;
+	width: 20px;
+	min-width: 20px;
+	height: 20px;
+	margin-right: 15px;
+	border-radius: 50%;
+	border: 1px solid #cfd3da;
 }
+
+.radio-label {
+	font-size: 15px;
+	font-weight: bold;
+	color: #393939;
+}
+
 .wrapper-column {
-  display: flex;
-  flex-direction: column;
-  margin-right: 65px;
+	display: flex;
+	flex-direction: column;
+	margin-right: 65px;
 }
+
 .input-wrapper {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 14px;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 14px;
 }
+
 .input-wrapper .checkbox-wrapper {
-  margin: 17px 0 0 0;
+	margin: 17px 0 0 0;
 }
+
 .input-label {
-  font-size: 13px;
-  font-weight: bold;
-  color: #393939;
-  margin-bottom: 6px;
+	font-size: 13px;
+	font-weight: bold;
+	color: #393939;
+	margin-bottom: 6px;
 }
+
 .input {
-  width: 294px;
-  height: 40px;
-  padding: 0 17px;
-  border-radius: 4px;
-  border: solid 1px #cfd3da;
-  background-color: #ffffff;
-  font-size: 14px;
-  color: #393939;
-  outline: none;
+	width: 294px;
+	height: 40px;
+	padding: 0 17px;
+	border-radius: 4px;
+	border: solid 1px #cfd3da;
+	background-color: #ffffff;
+	font-size: 14px;
+	color: #393939;
+	outline: none;
 }
+
 .area {
-  width: 294px;
-  height: 116px;
-  padding: 0 17px;
-  border-radius: 4px;
-  border: solid 1px #cfd3da;
-  background-color: #ffffff;
-  font-size: 14px;
-  color: #393939;
-  outline: none;
-  resize: none;
+	width: 294px;
+	height: 116px;
+	padding: 0 17px;
+	border-radius: 4px;
+	border: solid 1px #cfd3da;
+	background-color: #ffffff;
+	font-size: 14px;
+	color: #393939;
+	outline: none;
+	resize: none;
 }
+
 .checkbox {
-  width: 16px;
-  height: 16px;
-  margin-right: 16px;
-  background: #000;
+	width: 16px;
+	height: 16px;
+	margin-right: 16px;
+	background: #000;
 }
+
 .checkbox-wrapper {
-  display: flex;
-  align-items: center;
-  margin: 0 0 36px 26px;
+	display: flex;
+	align-items: center;
+	margin: 0 0 36px 0;
 }
+
 .checkbox-label {
-  font-size: 13px;
-  color: #393939;
+	font-size: 13px;
+	color: #393939;
 }
+
 .checkbox-label a {
-  color: #5392ce;
-  text-decoration: underline;
+	color: #5392ce;
+	text-decoration: underline;
+}
+
+.container {
+	display: flex;
+	justify-content: flex-start;
+	margin: 10px 0;
+}
+
+.container span:first-child {
+	margin-right: 10px;
+	font-size: 14px;
+	color: #999999;
+}
+
+.container span:last-child {
+	padding: 2px 8px;
+	font-size: 13px;
+	color: #666666;
+	background-color: #f0f0f0;
+	border-radius: 10px;
+}
+
+.wrapper-column-item {
+	width: 270px;
+	margin-bottom: 30px;
+}
+
+.wrapper-column-item .text {
+	font-size: 13px;
+	color: #999999;
+}
+
+.column {
+	display: flex;
+	margin: 0 0 25px 60px;
+}
+
+input[type="radio"]:checked~.radio {
+	background: #000;
 }
