--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ footer {
 }
 
 .main {
+	width: 1280px;
 	padding: 68px 128px 128px 168px;
 }
 
@@ -68,10 +69,14 @@ h2 {
 }
 
 .block {
-	width: 825px;
-	margin-bottom: 30px;
 	border-radius: 4px;
 	border: solid 1px #cfd3da;
+}
+
+.block-l {
+	width: 825px;
+	min-width: 825px;
+	margin: 0 30px 30px 0;
 }
 
 .block-2 .wrapper-line {
@@ -326,4 +331,39 @@ h2 {
 
 input[type="radio"]:checked~.radio {
 	background: #000;
+}
+
+.block-wrapper {
+	width: 1080px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+.block-s {
+	width: 255px;
+	min-width: 255px;
+}
+
+.link {
+	font-size: 14px;
+	color: #5392ce;
+	text-decoration: underline;
+}
+
+.wrapper-line-space {
+	justify-content: space-between;
+	align-items: flex-start;
+	margin-bottom: 10px;
+}
+
+.wrapper-line-space span:first-child {
+	color: #393939;
+}
+
+.line {
+	width: 100%;
+	height: 1px;
+	margin: 30px 0;
+	background: #cfd3da;
 }
